--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>React App</title>
+    <title>Youtube</title>
   </head>
 
   <body>
